--- a/phpmyadmin/Dockerfile
+++ b/phpmyadmin/Dockerfile
@@ -2,8 +2,10 @@ FROM apache2
 
 RUN apt-get install -y mysql-client
 RUN apt-get install -y php5 php5-mysql libapache2-mod-php5
+RUN apt-get install -y wget
 
-RUN rm /var/www/index.html
+RUN rm -rf /var/www
 
-RUN curl -O https://github.com/phpmyadmin/phpmyadmin/archive/master.tar.gz
-RUN tar -xvf master.tar.gz /var/www/
+RUN wget --no-check-certificate http://github.com/phpmyadmin/phpmyadmin/archive/master.tar.gz
+RUN tar -C /var -xvf master.tar.gz
+RUN mv /var/phpmyadmin-master /var/www
