--- a/phpmyadmin/Dockerfile
+++ b/phpmyadmin/Dockerfile
@@ -9,3 +9,5 @@ RUN rm -rf /var/www
 RUN wget --no-check-certificate http://github.com/phpmyadmin/phpmyadmin/archive/RELEASE_4_2_8.tar.gz
 RUN tar -C /var -xvf master.tar.gz
 RUN mv /var/phpmyadmin-master /var/www
+
+COPY config.inc.php /var/www
