--- a/phpmyadmin/Dockerfile
+++ b/phpmyadmin/Dockerfile
@@ -8,6 +8,6 @@ RUN rm -rf /var/www
 
 RUN wget --no-check-certificate http://github.com/phpmyadmin/phpmyadmin/archive/RELEASE_4_2_8.tar.gz
 RUN tar -C /var -xvf RELEASE_4_2_8.tar.gz
-RUN mv /var/phpmyadmin-master /var/www
+RUN mv /var/phpmyadmin-RELEASE_4_2_8 /var/www
 
 COPY config.inc.php /var/www
