--- a/apache2/Dockerfile
+++ b/apache2/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:12.04
 
 RUN apt-get update
-RUN apt-get install -y apache2
+RUN apt-get install -y apache2=2.2.22-1ubuntu1.7
 
 ENV APACHE_RUN_USER www-data
 ENV APACHE_RUN_GROUP www-data
