--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -27,17 +27,7 @@ listen stats :4001
   stats auth username:password
   stats uri /
 
-frontend http-in
-  bind *:80
-
-  # Define hosts based on domain names
-  # acl app1_test hdr(host) -i app1.com
-
-  ## figure out backend to use based on domainname
-  # use_backend app1 if app1_test
-  use_backend app
-
-backend app
+listen http-in :80
   balance roundrobin
   option httpclose
   option forwardfor
